promethues/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/ingress.class: "nginx"  # Ensures both use the same LB
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /prometheus/api
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
